--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <div class="container">
             <img class="logo-7days" src="./img/background-7days.svg" alt="Logo Challenge 7DaysOfCode">
-            <h1 class="titulo-principal">JavaScript</h1>
+            <h1><a class="titulo-principal" href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript">JavaScript</a></h1>
             <p class="texto-principal"><a class="link-desafio"
                     href="https://7daysofcode.io/matricula/logica-programacao">Desafio Lógica com JavaScript</a> com <a
                     class="link-rafa" href="https://github.com/rafaballerini">Rafa Ballerini</a></p>
