--- a/assets/7dayofcode.html
+++ b/assets/7dayofcode.html
@@ -10,24 +10,23 @@
 </head>
 <body>
     <header class="cabecalho">
-        <nav class="menu">
-         <ul>
-            <li class="btn-li"><a class="btn-a" href="https://github.com/codebuenozy/">GitHub</a></li>
-         </ul>
-         <ul>
-            <li class="btn-li"><a class="btn-a" href="../index.html">Home</a></li>
-         </ul>
-         <ul>
-            <li class="btn-li"><a class="btn-a" href="https://www.linkedin.com/in/codebuenozy/">LinkedIn</a></li>
+        <nav>
+         <ul class="menu">
+            <li class="btn-menu"><a class="btn-a" href="./6dayofcode.html">Desafio 6</a></li>
+            <li class="btn-menu"><a class="btn-a" href="https://github.com/codebuenozy/7DaysOfCode/blob/main/script/7dayofcode.js">GitHub</a></li>
+            <li class="btn-menu"><a class="btn-a" href="../index.html">Home</a></li>
+            <li class="btn-menu"><a class="btn-a" href="https://www.linkedin.com/in/codebuenozy/">LinkedIn</a></li>
          </ul>
         </nav>
     </header>
 
     <main>
         <div class="container">
+            <p class="texto-principal">Sétimo e Ultimo dia do desafio <strong>???</strong></p>
+            <h1><a class="texto-desafio" onclick="vejaDesafioSete()">Veja o Desafio</a></h1>
             <img class="logo-7days" src="../img/background-7days.svg" alt="Logo Challenge 7DaysOfCode">
-            <h3 class="titulo-principal">JavaScript</h3>
-            <p class="texto-principal">Sétimo e Ultimo dia do desafio - ???</p>
+            <p class="texto-principal">Para Resolver o Desafio</p>
+            <button class="btn-desafio" type="button" onclick="desafioSete()">Clique Aqui</button>
         </div>
     </main>
 </body>
