Modificado resolução do Desafio 1 implementando Funções

--- a/assets/1dayofcode.html
+++ b/assets/1dayofcode.html
@@ -22,10 +22,10 @@
     <main>
         <div class="container">
             <p class="texto-principal">Primeiro dia do desafio <strong>Operações Booleanas</strong></p>
-            <h1><a class="texto-desafio" onclick="vejaDesafioUm()">Veja o Desafio</a></h1>
+            <h1><a class="texto-desafio" onclick="mostraDesafioAlert()">Veja o Desafio</a></h1>
             <img class="logo-7days" src="../img/background-7days.svg" alt="Logo Challenge 7DaysOfCode">
             <p class="texto-principal">Para Resolver o Desafio</p>
-            <button class="btn-desafio" type="button" onclick="desafioUm()">Clique Aqui</button>
+            <button class="btn-desafio" type="button" onclick="mostraComparacaoAlert()">Clique Aqui</button>
         </div>
     </main>
 </body>
