--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <header class="cabecalho">
         <nav class="menu">
          <ul>
-            <li class="btn-li"><a class="btn-a" href="https://github.com/codebuenozy/">GitHub</a></li>
+            <li class="btn-menu"><a class="btn-a" href="https://github.com/codebuenozy/">GitHub</a></li>
          </ul>
          <ul>
-            <li class="btn-li"><a class="btn-a" href="https://www.linkedin.com/in/codebuenozy/">LinkedIn</a></li>
+            <li class="btn-menu"><a class="btn-a" href="https://www.linkedin.com/in/codebuenozy/">LinkedIn</a></li>
          </ul>
          <ul>
-            <li class="btn-li"><a class="btn-a" href="./assets/1dayofcode.html">Desafio 1</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./assets/1dayofcode.html">Desafio 1</a></li>
          </ul>
         </nav>
     </header>
