Correção de erro na responsividade

--- a/assets/4dayofcode.html
+++ b/assets/4dayofcode.html
@@ -12,10 +12,10 @@
     <header class="cabecalho">
         <nav>
          <ul class="menu">
-            <li class="btn-menu"><a class="btn-a" href="./3dayofcode.html">Desafio 3</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./3dayofcode.html"><-3</a></li>
             <li class="btn-menu"><a class="btn-a" href="https://github.com/codebuenozy/7DaysOfCode/blob/main/script/4dayofcode.js">GitHub</a></li>
             <li class="btn-menu"><a class="btn-a" href="../index.html">Home</a></li>
-            <li class="btn-menu"><a class="btn-a" href="./5dayofcode.html">Desafio 5</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./5dayofcode.html">5-></a></li>
          </ul>
         </nav>
     </header>
