--- a/assets/6dayofcode.html
+++ b/assets/6dayofcode.html
@@ -12,10 +12,10 @@
     <header class="cabecalho">
         <nav>
          <ul class="menu">
-            <li class="btn-menu"><a class="btn-a" href="./5dayofcode.html">Desafio 5</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./5dayofcode.html"><-5</a></li>
             <li class="btn-menu"><a class="btn-a" href="https://github.com/codebuenozy/7DaysOfCode/blob/main/script/6dayofcode.js">GitHub</a></li>
             <li class="btn-menu"><a class="btn-a" href="../index.html">Home</a></li>
-            <li class="btn-menu"><a class="btn-a" href="./7dayofcode.html">Desafio 7</a>
+            <li class="btn-menu"><a class="btn-a" href="./7dayofcode.html">7-></a>
         </nav>
     </header>
 
