--- a/assets/7dayofcode.html
+++ b/assets/7dayofcode.html
@@ -12,10 +12,9 @@
     <header class="cabecalho">
         <nav>
          <ul class="menu">
-            <li class="btn-menu"><a class="btn-a" href="./6dayofcode.html">Desafio 6</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./6dayofcode.html"><-6</a></li>
             <li class="btn-menu"><a class="btn-a" href="https://github.com/codebuenozy/7DaysOfCode/blob/main/script/7dayofcode.js">GitHub</a></li>
             <li class="btn-menu"><a class="btn-a" href="../index.html">Home</a></li>
-            <li class="btn-menu"><a class="btn-a" href="https://www.linkedin.com/in/codebuenozy/">LinkedIn</a></li>
          </ul>
         </nav>
     </header>
