--- a/assets/1dayofcode.html
+++ b/assets/1dayofcode.html
@@ -14,7 +14,7 @@
          <ul class="menu">
             <li class="btn-menu"><a class="btn-a" href="https://github.com/codebuenozy/7DaysOfCode/blob/main/script/1dayofcode.js">GitHub</a></li>
             <li class="btn-menu"><a class="btn-a" href="../index.html">Home</a></li>
-            <li class="btn-menu"><a class="btn-a" href="./2dayofcode.html">Desafio 2</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./2dayofcode.html">2-></a></li>
          </ul>
         </nav>
     </header>
