--- a/assets/2dayofcode.html
+++ b/assets/2dayofcode.html
@@ -12,10 +12,10 @@
     <header class="cabecalho">
         <nav>
          <ul class="menu">
-            <li class="btn-menu"><a class="btn-a" href="./1dayofcode.html">Desafio 1</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./1dayofcode.html"><-1</a></li>
             <li class="btn-menu"><a class="btn-a" href="https://github.com/codebuenozy/7DaysOfCode/blob/main/script/2dayofcode.js">GitHub</a></li>
             <li class="btn-menu"><a class="btn-a" href="../index.html">Home</a></li>
-            <li class="btn-menu"><a class="btn-a" href="./3dayofcode.html">Desafio 3</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./3dayofcode.html">3-></a></li>
          </ul>
         </nav>
     </header>
