--- a/assets/3dayofcode.html
+++ b/assets/3dayofcode.html
@@ -12,10 +12,10 @@
     <header class="cabecalho">
         <nav>
          <ul class="menu">
-            <li class="btn-menu"><a class="btn-a" href="./2dayofcode.html">Desafio 2</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./2dayofcode.html"><-2</a></li>
             <li class="btn-menu"><a class="btn-a" href="https://github.com/codebuenozy/7DaysOfCode/blob/main/script/3dayofcode.js">GitHub</a></li>
             <li class="btn-menu"><a class="btn-a" href="../index.html">Home</a></li>
-            <li class="btn-menu"><a class="btn-a" href="./4dayofcode.html">Desafio 4</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./4dayofcode.html">4-></a></li>
          </ul>
         </nav>
     </header>
