--- a/assets/5dayofcode.html
+++ b/assets/5dayofcode.html
@@ -12,10 +12,10 @@
     <header class="cabecalho">
         <nav>
          <ul class="menu">
-            <li class="btn-menu"><a class="btn-a" href="./4dayofcode.html">Desafio 4</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./4dayofcode.html"><-4</a></li>
             <li class="btn-menu"><a class="btn-a" href="https://github.com/codebuenozy/7DaysOfCode/blob/main/script/5dayofcode.js">GitHub</a></li>
             <li class="btn-menu"><a class="btn-a" href="../index.html">Home</a></li>
-            <li class="btn-menu"><a class="btn-a" href="./6dayofcode.html">Desafio 6</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./6dayofcode.html">6-></a></li>
          </ul>
         </nav>
     </header>
