--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li class="btn-menu"><a class="btn-a" href="https://www.linkedin.com/in/codebuenozy/">LinkedIn</a></li>
          </ul>
          <ul>
-            <li class="btn-menu"><a class="btn-a" href="./assets/1dayofcode.html">Desafio 1</a></li>
+            <li class="btn-menu"><a class="btn-a" href="./assets/1dayofcode.html">1-></a></li>
          </ul>
         </nav>
     </header>
@@ -30,7 +30,7 @@
             <img class="logo-7days" src="./img/background-7days.svg" alt="Logo Challenge 7DaysOfCode">
             <h1><a class="titulo-principal" href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript">JavaScript</a></h1>
             <p class="texto-principal"><a class="link-desafio"
-                    href="https://7daysofcode.io/matricula/logica-programacao">Desafio Lógica com JavaScript</a> com <a
+                    href="https://7daysofcode.io/matricula/logica-programacao">Desafio de Lógica</a> com <a
                     class="link-rafa" href="https://github.com/rafaballerini">Rafa Ballerini</a></p>
         </div>
     </main>
