Reestruturação e modificação do Desafio 2

--- a/assets/5dayofcode.html
+++ b/assets/5dayofcode.html
@@ -22,11 +22,11 @@
 
     <main>
         <div class="container">
-            <p class="texto-principal">Quinto dia do desafio <strong>???</strong></p>
-            <h1><a class="texto-desafio" onclick="vejaDesafioCinco()">Veja o Desafio</a></h1>
+            <p class="texto-principal">Quinto dia do desafio <strong>Arrays e Coleções</strong></p>
+            <h1><a class="texto-desafio" onclick="mostraDesafioAlert()">Veja o Desafio</a></h1>
             <img class="logo-7days" src="../img/background-7days.svg" alt="Logo Challenge 7DaysOfCode">
             <p class="texto-principal">Para Resolver o Desafio</p>
-            <button class="btn-desafio" type="button" onclick="desafioCinco()">Clique Aqui</button>
+            <button class="btn-desafio" type="button" onclick="adcionarNaLista()">Clique Aqui</button>
         </div>
     </main>
 </body>
