--- a/assets/2dayofcode.html
+++ b/assets/2dayofcode.html
@@ -23,10 +23,10 @@
     <main>
         <div class="container">
             <p class="texto-principal">Segundo dia do desafio <strong>Variáveis</strong></p>
-            <h1><a class="texto-desafio" onclick="vejaDesafioDois()">Veja o Desafio</a></h1>
+            <h1><a class="texto-desafio" onclick="mostraDesafioAlert()">Veja o Desafio</a></h1>
             <img class="logo-7days" src="../img/background-7days.svg" alt="Logo Challenge 7DaysOfCode">
             <p class="texto-principal">Para Resolver o Desafio</p>
-            <button class="btn-desafio" type="button" onclick="desafioDois()">Clique Aqui</button>
+            <button class="btn-desafio" type="button" onclick="capturaVariaveis()">Clique Aqui</button>
         </div>
     </main>
 </body>
