--- a/assets/4dayofcode.html
+++ b/assets/4dayofcode.html
@@ -23,10 +23,10 @@
     <main>
         <div class="container">
             <p class="texto-principal">Quarto dia do desafio <strong>Mais Loops e Randomização</strong></p>
-            <h1><a class="texto-desafio" onclick="vejaDesafioQuatro()">Veja o Desafio</a></h1>
+            <h1><a class="texto-desafio" onclick="mostraDesafioAlert()">Veja o Desafio</a></h1>
             <img class="logo-7days" src="../img/background-7days.svg" alt="Logo Challenge 7DaysOfCode">
             <p class="texto-principal">Para Resolver o Desafio</p>
-            <button class="btn-desafio" type="button" onclick="desafioQuatro()">Clique Aqui</button>
+            <button class="btn-desafio" type="button" onclick="adivinhaNumero()">Clique Aqui</button>
         </div>
     </main>
 </body>
