--- a/assets/7dayofcode.html
+++ b/assets/7dayofcode.html
@@ -21,11 +21,11 @@
 
     <main>
         <div class="container">
-            <p class="texto-principal">Sétimo e Ultimo dia do desafio <strong>???</strong></p>
-            <h1><a class="texto-desafio" onclick="vejaDesafioSete()">Veja o Desafio</a></h1>
+            <p class="texto-principal">Sétimo e Ultimo dia do desafio <strong>Funções em Javascript</strong></p>
+            <h1><a class="texto-desafio" onclick="mostraDesafioAlert()">Veja o Desafio</a></h1>
             <img class="logo-7days" src="../img/background-7days.svg" alt="Logo Challenge 7DaysOfCode">
             <p class="texto-principal">Para Resolver o Desafio</p>
-            <button class="btn-desafio" type="button" onclick="desafioSete()">Clique Aqui</button>
+            <button class="btn-desafio" type="button" onclick="funcaoCalcula()">Clique Aqui</button>
         </div>
     </main>
 </body>
